--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
 
 html,body{
@@ -20,8 +21,8 @@ html,body{
 /*****/
 
 header{
-    background-color: #D6D6D6;
-    padding: 10px 2% 30px 2%;
+    background-color: rgb(180,180,180);
+    padding: 10px 2% 40px 2%;
 }
 
 .logo-1{
@@ -48,42 +49,44 @@ header{
 
 section.cover-form{
     width: 100%;
-    padding: 0 2%;
 }
 
 .bg{
-    height: 500px;
+    position: relative;
+    height: 560px;
     background-position: center;
     background-size: cover;
     background-image: url('../images/bg-form.jpg'); 
 }
 
 .form-container{
-    float: right;
-    margin-right: 40px;
+    position: absolute;
+    right: 30px;
+    top: -2.5%;
     width: 400px;
-    height: 110%;
-    position: relative;
-    top: -5%;
-    background-color: white;
+    height: 105%;
+    border-width: 12px;
+    border-color: rgba(120,120,120,0.5);
+    border-style: solid;
+    background-color:rgba(10,23,55,0.8);
 }
 
 .form-container h2{
-    font-weight: normal;
-    padding:20px 15px;
-    color: black;
+    font-weight: 300;
+    padding:25px 15px;
+    color: white;
     font-size: 18px;
-    background-color: rgb(234,236,239);
+    background-color: rgba(10,23,55,0.8);
 }
 
 .form-container form{
-    margin-top: 8px;
+    margin-top: 20px;
     padding: 15px;
 }
 
 .form-container form p{
     font-size: 14px;
-    color: #525252;
+    color:white;
 }
 
 .form-wraper:not(:first-child){
@@ -103,7 +106,7 @@ section.cover-form{
 }
 
 .form-container form input[type=submit]{
-    background-color: #033C50;
+    background-image: linear-gradient(to bottom right, #1a237e, #5c6bc0 );
     text-transform: uppercase;
     width: 100%;
     font-size: 25px;
@@ -111,6 +114,103 @@ section.cover-form{
     height: 50px;
     cursor: pointer;
     border: 0;
+    border-radius: 25px;
+}
+
+section.chamada{
+    z-index: 1;
+    width: 100%;
+    text-align: center; 
+}
+
+section.chamada .container{
+    background-color:rgb(32,47,95);
+    padding: 70px 0 50px 0;
+}
+
+section.chamada h2{
+    width: 98%;
+    max-width: 700px;
+    display: inline-block;
+    color: white;
+    font-weight: normal;
+    font-size: 30px;
+    margin-top: 10px;
+}
+
+section.chamada p{
+    width: 98%;
+    max-width: 700px;
+    display: inline-block;
+    color: white;
+    font-size: 18px;
+    font-weight: 300;
+    margin-top: 10px;
+}
+
+.flex-mosaico{
+    display: flex;
+}
+
+.item-1-mosaico{
+    background-position: center;
+    background-size: cover;
+    width: 60%;
+}
+
+.item-2-mosaico{
+    background-color:rgb(68, 83, 128);
+    padding: 60px 40px;
+    width: 40%;
+}
+
+.item-2-mosaico p{
+    color: white;
+}
+
+footer{
+    text-align: center;
+    padding: 20px 0;
+}
+
+footer img{
+    width: 120px;
+}
+
+footer p{
+    margin-top: 8px;
+}
+
+@media screen and (max-width: 768px){
+    .flex-mosaico{
+        display: block;
+    }
+
+    .item-1-mosaico{
+        padding-top: 80%;
+        width: 100%;
+    }
+
+    .item-2-mosaico{
+        text-align: justify;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 960px){
+    .bg{
+        height: auto;
+        padding: 40px 0;
+        text-align: center;
+    }
+
+    .form-container{
+        height: auto;
+        width: 96%;
+        max-width: 400px;
+        position: static;
+        display: inline-block;
+    }
 }
 
 @media screen and (max-width: 510px){
